p5 ok. Enlever les bandes blanches index - product

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <!--Titre de la page-->
-        <h1>Orinoco</h1>
+        <h1 class="title_in">Orinoco</h1>
         <!-- Lien vers la page panier-->
         <a href="../front-end/webpages/panier.html">
             <i class="fas fa-shopping-cart"></i>
@@ -26,6 +26,7 @@
     <!--Section permettant de définir l'endroit où sera écrit le code HTML depuis le fichier index.js-->
     <section id="camera" class="row">
         <h2>Camera vintage</h2>
+        <div class="cameras"></div>
     </section>
 
 
