--- a/front-end/webpages/commande.html
+++ b/front-end/webpages/commande.html
@@ -15,16 +15,29 @@
 </head>
 <body>
     <header class="header">
-
+        <!-- Lien vers la page d'accueil-->
+        <a href="../index.html">
+            <p>Accueil</p>
+        </a>
+        <h1 class="title_co">Orinoco</h1>
     </header>
 
     <!-- Affichage des objets, orderId et message de confirmation -->
-    <div class="text-center">
+    <div class="text-center"> 
+        <h2>Merci pour votre commande !</h2>
+        <p>Numéro de commande : <strong id="orderID"></strong></p>
+        <p id="total"></p>
+        <div id="panier" class="d-flex justify-content-center">
 
+        </div>
     </div>
 
     <footer id="footer">
-
+        <div class="footer_column">
+            <h4>Assistance</h4>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Nous contacter</a>
+        </div>
     </footer>
 </body>
 </html>
