--- a/front-end/webpages/produit.html
+++ b/front-end/webpages/produit.html
@@ -18,11 +18,15 @@
         <a href="../index.html">
             Accueil
         </a>
-        <h1>Orinoco</h1>
-        <a href="../front-end/webpages/panier.html">
+        <h1 class="title_pr">Orinoco</h1>
+        <a href="./panier.html">
             <i class="fas fa-shopping-cart"></i>
         </a>
     </header>
+
+    <section>
+        <h2>Produit</h2>
+    </section>
 
     <!-- Section permettant de définir l'endroit où sera écrit le code HTML depuis le fichier product.js -->
     <section id="camera" class="produit">
@@ -34,7 +38,8 @@
             <div class="col-md-ct">
                 <select name="lense" id="lensesCameras"></select>
                 <input type="number" id="quantite" min="0" max="10" value="1">
-                <button id="ajoutPanier" class="btn btn-primary"></button>
+                <button id="ajoutPanier" class="btn btn-primary">
+                </button>                                                      
             </div>
         </div>
     </section>
